== 2.3.0 ==
Release date: March 22, 2021
* New: Random Image widget
* Fixed: Info Box - Responsive Icon Position control was not working 
* Fixed: Display Conditions - Day of the Week option was not working for Sunday

== 2.2.5 ==
Release date: February 23, 2021
* Added: Image Hotspots - Z-index option for tooltips
* Enhancement: Pricing Table - Added pointer cursor if click trigger is used for tooltip
* Fixed: Pricing Table - If tooltip content is left blank it was showing content from previous item's tooltip content
* Added: Pricing Table - Settings to change color and size for tooltip icon
* Fixed: Pricing Table - Tooltip icon was showing even if there was no tooltip content

== 2.2.4 ==
Release date: February 10, 2021
* Fixed: Instagram Feed – Added compatibility with new Instagram API changes

== 2.2.3 ==
Release date: February 3, 2021
* Fixed: Compatibility with Elementor 3.0
* Fixed: Team Member, Team Member Carousel - Added option to show content over image
* Fixed: Display Conditions - Timezone issue
* Added: Display Conditions - Post term, Terms archive, Current User, Day of Week, Current Date and Time conditions
* Enhancement: Advanced Accordion - Updated default styling
* Added: Advanced Accordion - Hover and active colors for Items
* Added: Advanced Accordion - Title bottom spacing option

== 2.2.2 ==
Release date: December 10, 2020
* Fixed: Instagram Feed - Masonry layout

== 2.2.1 ==
Release date: November 2, 2020
* Fixed: Instagram Feed - Feed was not working

== 2.2.0 ==
Release date: October 27, 2020
* New: Added page templates in PowerPack Template Library
* Fixed: Flip Box - Link was not working if fade effect is selected
* Added: Counter - Thousand separator option
* Added: Logo Grid - Randomize logos option
* Added: Content Ticker - Options to show post date and time
* Enhancement: Content Ticker - Added recommended icons for post author and category
* Fixed: Buttons - Tooltip position option was not working