@@ -3,6 +3,7 @@ namespace PowerpackElementsLite;
 
 use Elementor\Utils;
 use PowerpackElementsLite\Classes\PP_Config;
+use PowerpackElements\Classes\PP_Helper;
 
 if ( ! defined( 'ABSPATH' ) ) {
 	exit; } // Exit if accessed directly
@@ -148,7 +149,7 @@ class PowerpackLitePlugin {
 			POWERPACK_ELEMENTS_LITE_VER
 		);
 
-		if ( class_exists( 'GFCommon' ) ) {
+		if ( class_exists( 'GFCommon' && \Elementor\Plugin::$instance->preview->is_preview_mode() && PP_Helper::is_widget_active( 'Gravity_Forms' ) ) ) {
 			$gf_forms = \RGFormsModel::get_forms( null, 'title' );
 			foreach ( $gf_forms as $form ) {
 				if ( '0' !== $form->id ) {
